Gen Ballerina package instead of file for single XML input